apps/monitoring/kromgo/kromgo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kromgo
  namespace: monitoring
  labels:
    app: kromgo
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kromgo
  template:
    metadata:
      labels:
        app: kromgo
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: kromgo
      containers:
        - name: kromgo
          image: ghcr.io/kashalls/kromgo:v0.4.2@sha256:89eab1c6604d8ef79fb0e7340620d6559ef296cc469c4eabf22598bbaf93ff42
          ports:
            - containerPort: 80
              name: http
            - containerPort: 88
              name: health
          livenessProbe:
            httpGet:
              path: /healthz
              port: health
          readinessProbe:
            httpGet:
              path: /readyz
              port: health
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 10m
            limits:
              memory: 64Mi
          volumeMounts:
            - name: config-volume
              mountPath: /kromgo/config.yaml
              subPath: config.yaml
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: kromgo-configmap
