apps/monitoring/kromgo/kromgo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kromgo
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  selector:
    app: kromgo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
  clusterIP: None
