apps/monitoring/kromgo/kromgo-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo
  namespace: monitoring
spec:
  parentRefs:
  - name: external-gateway
    namespace: default
    sectionName: kromgo
  hostnames:
  - "kromgo.sholdee.net"
  rules:
  - backendRefs:
    - name: kromgo
      namespace: monitoring
      port: 80
